# nigeleke.github.io

./: .gitignore  .gitmodules  404.html  Cargo.toml  Dioxus.toml  README.md  _color.scss  build.rs  config.toml  flake.nix  index-48605640032495c0.css  index.html  index.scss  nigeleke-github-io-source-2b8359b0533b18ce.js  nigeleke-github-io-source-2b8359b0533b18ce_bg.wasm  nigeleke-github-io-source-a27212c7e5f94d84.js  nigeleke-github-io-source-a27212c7e5f94d84_bg.wasm  search_index.en.js  sitemap.xml
.github/workflows/: build.yml  deploy.yml
apis/: index.html
assets/css/: centered.css  external_link.css  headshot.css  main.css  menu.css  not_found.css  socials.css  title.css
content/: apis.md  italian.md  projects.md  public_key.md  reference.md  useful_info.md
docs/: 404.html  index.html  robots.txt  search_index.en.js  sitemap.xml
docs/apis/: index.html
docs/assets/: centered-e08ba5ae46d459b3.css  external_link-7d944ddbd3ba1285.css.br  external_link-dxhbb6fc58a191e3a7.css  facebook-db36beae9d0a538f.png.br  favicon-60ba2c1021516161.ico.br  github-ff404fa2aa1e3964.png.br  headshot-dxh4693f272ad78a1a1.css  headshot-ed8f5dd4de8e5ab7.css.br  icon-menu-a2a22d4e76434ac9.png.br  linkedin-e2a99096de202dab.png.br  main-57054b792713a682.css  main-682d9308e5652c24.css  main-682d9308e5652c24.css.br  main-9cc218e81662eb82.css  main-b7cc03544a35293e.css  main-b7cc03544a35293e.css.br  main-dxh5c4d5c8dd5284038.css  (+83 more)
markdown/: apis.md  italian.md  projects.md  reference.md  useful_info.md
projects/: index.html
public-key/: index.html
reference/: index.html
src/: lib.rs  main.rs  routes.rs
static/: 404.html
templates/: page.html
useful-info/: index.html
(+76 files in other folders)
