[package]
name = "site"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["router"] }
pulldown-cmark = "0.13.0"

[lib]
name = "site"
path = "src/lib.rs"

[features]
default = ["web"]
web = ["dioxus/web"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false
