[package]
name = "site"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["router"] }
pulldown-cmark = "0.13.0"

[lib]
name = "site"
path = "src/lib.rs"

[features]
default = ["web"]
web = ["dioxus/web"]

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
lto = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.wasm-release]
inherits = "release"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false
